fix(src/components/Contact.pcss): fix overflow top issue while animating

--- a/src/components/Contact.pcss
+++ b/src/components/Contact.pcss
@@ -2,7 +2,7 @@
 @import 'animate.css';
 
 .contact {
-  margin-top: 8vh;
+  padding-top: 8vh;
   overflow: hidden; /* fix for animate.css momentary scrollbar */
 
   .icons {
